# serializer version: 1
# name: test_caluma_export_ag[Municipality]
  list([
    '2025-1',
    'Baugesuch',
    'Teststrasse 12, Aarburg',
    '1338',
    'Überbauung Westfeld',
    '05.02.2025',
    'In Zirkulation',
    'John Doe',
    'Cox, Carter and Tucker',
    'vazquezgloria@example.org',
    'Aarburg',
    '01.01.2025',
    '30.01.2025',
    '08.05.2025',
  ])
# ---
# name: test_caluma_export_sz[False-Gemeinde Schwyz-Municipality-200-1-3]
  list([
    '123-45-77',
    'Test form',
    'Test location',
    'Smoothie-licious Inc., Red Apple',
    'Test intent',
    'Test location',
    'Test instance state',
    '',
    '02.03.2023',
    '',
    '',
    '',
    '01.04.2023',
    '03.04.2023',
  ])
# ---
# name: test_caluma_export_sz[False-Gemeinde Schwyz-Service-200-1-3]
  list([
    '123-45-77',
    'Test form',
    'Test location',
    'Smoothie-licious Inc., Red Apple',
    'Test intent',
    'Test location',
    'Test instance state',
    '',
    '02.03.2023',
    '',
    '',
    '',
    '01.04.2023',
    '03.04.2023',
  ])
# ---
# name: test_caluma_export_sz[True-Gemeinde Schwyz-Municipality-200-1-3]
  list([
    '123-45-77',
    'Test form',
    'Test location',
    'Smoothie-not-so-licious Inc., Red Apple',
    'Test intent override',
    'Test address, Test special name, Test location',
    'Test instance state',
    '',
    '02.03.2023',
    '',
    '',
    '',
    '01.04.2023',
    '03.04.2023',
  ])
# ---
# name: test_caluma_export_sz[True-Gemeinde Schwyz-Service-200-1-3]
  list([
    '123-45-77',
    'Test form',
    'Test location',
    'Smoothie-not-so-licious Inc., Red Apple',
    'Test intent override',
    'Test address, Test special name, Test location',
    'Test instance state',
    '',
    '02.03.2023',
    '',
    '',
    '',
    '01.04.2023',
    '03.04.2023',
  ])
# ---
